# real-estate-agency

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  singleton.h
database/: real-estate-db.sqlite
doc/: Study practice compliting report.docx
widgets/: searchresultsrecordbuilder.cpp  searchresultswidget.cpp  searchresultswidget.h  searchresultswidget.ui  searchwidget.cpp  searchwidget.h  searchwidget.ui  widgetmanager.cpp  widgetmanager.h
widgets/searchresultbuilder/: searchresultbuilder.cpp  searchresultbuilder.h
